--- a/eu.dariolucia.reatmetric.ui/src/main/resources/eu/dariolucia/reatmetric/ui/fxml/MimicsDisplayTabWidget.fxml
+++ b/eu.dariolucia.reatmetric.ui/src/main/resources/eu/dariolucia/reatmetric/ui/fxml/MimicsDisplayTabWidget.fxml
@@ -26,11 +26,43 @@
 		<ToolBar prefHeight="32.0">
 			<items>
 				<ToggleButton fx:id="liveTgl" mnemonicParsing="false" onAction="#liveToggleSelected" selected="true" prefHeight="25.0" prefWidth="91.0" text="Live"/>
-				<Button fx:id="goToStartBtn" disable="true" mnemonicParsing="false" onAction="#goToStart" text="|&lt;" />
-				<Button fx:id="goBackOneBtn" disable="true" mnemonicParsing="false" onAction="#goBackOne" text="&lt;" />
+				<Button fx:id="goToStartBtn" disable="true" mnemonicParsing="false" onAction="#goToStart">
+					<graphic>
+						<ImageView pickOnBounds="true" preserveRatio="true">
+							<image>
+								<Image url="@/eu/dariolucia/reatmetric/ui/fxml/images/16px/fast-backward.svg.png" />
+							</image>
+						</ImageView>
+					</graphic>
+				</Button>
+				<Button fx:id="goBackOneBtn" disable="true" mnemonicParsing="false" onAction="#goBackOne">
+					<graphic>
+						<ImageView pickOnBounds="true" preserveRatio="true">
+							<image>
+								<Image url="@/eu/dariolucia/reatmetric/ui/fxml/images/16px/back.svg.png" />
+							</image>
+						</ImageView>
+					</graphic>
+				</Button>
 				<Button fx:id="selectTimeBtn" disable="true" mnemonicParsing="false" onAction="#selectTimeButtonSelected" prefHeight="25.0" prefWidth="180.0" text="---" />
-				<Button fx:id="goForwardOneBtn" disable="true" mnemonicParsing="false" onAction="#goForwardOne" text="&gt;" />
-				<Button fx:id="goToEndBtn" disable="true" mnemonicParsing="false" onAction="#goToEnd" text="&gt;|" />
+				<Button fx:id="goForwardOneBtn" disable="true" mnemonicParsing="false" onAction="#goForwardOne">
+					<graphic>
+						<ImageView pickOnBounds="true" preserveRatio="true">
+							<image>
+								<Image url="@/eu/dariolucia/reatmetric/ui/fxml/images/16px/play.svg.png" />
+							</image>
+						</ImageView>
+					</graphic>
+				</Button>
+				<Button fx:id="goToEndBtn" disable="true" mnemonicParsing="false" onAction="#goToEnd">
+					<graphic>
+						<ImageView pickOnBounds="true" preserveRatio="true">
+							<image>
+								<Image url="@/eu/dariolucia/reatmetric/ui/fxml/images/16px/fast-forward.svg.png" />
+							</image>
+						</ImageView>
+					</graphic>
+				</Button>
 				<Separator orientation="VERTICAL" />
                 <ProgressIndicator fx:id="progressIndicator" prefHeight="25.0" prefWidth="25.0" visible="false" />
 				<Separator orientation="VERTICAL" />
